--- a/public/style_admin/style.css
+++ b/public/style_admin/style.css
@@ -1,4 +1,5 @@
 /* @import url("https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i,600,700"); */
+@import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
 *,
   *:before,
   *:after {
