--- a/public/style_admin/popup.css
+++ b/public/style_admin/popup.css
@@ -29,6 +29,7 @@
     transition: opacity 1ms;
     visibility: hidden;
     opacity: 0;
+    /* z-index: 999999; */
   }
   div.overlay:target {
     visibility: visible;
