--- a/public/style_admin/style.css
+++ b/public/style_admin/style.css
@@ -16,7 +16,7 @@
   }
   
   body {
-    height: 100%;
+    min-height: 100%;
     margin: 0;
     font: normal 16px/1.2 "Josefin Sans", sans-serif;
     font-weight: 100;
