--- a/public/style_admin/form.css
+++ b/public/style_admin/form.css
@@ -1,6 +1,6 @@
 #form input[type="text"],
 #form input[type="email"],
-#form input[type="tel"],
+#form input[type="password"],
 #form input[type="url"],
 #form textarea,
 #form input[type=file],
@@ -34,7 +34,7 @@ fieldset {
 
 #form input[type="text"],
 #form input[type="email"],
-#form input[type="tel"],
+#form input[type="password"],
 #form input[type="url"],
 #form input[type=file],
 #form textarea,
@@ -48,7 +48,7 @@ fieldset {
 
 #form input[type="text"]:hover,
 #form input[type="email"]:hover,
-#form input[type="tel"]:hover,
+#form input[type="password"]:hover,
 #form input[type="url"]:hover,
 #form input[type=file]:hover,
 #form textarea:hover 
