Done iu suwar dan form tanpa redirect

--- a/public/style_admin/popup.css
+++ b/public/style_admin/popup.css
@@ -61,6 +61,8 @@
     font-weight: bold;
     text-decoration: none;
     color: #333;
+    background: white;
+    border: 0px;
   }
   div.popup .close:hover {
     color: #06d85f;
