--- a/public/style_admin/dropdown-user.css
+++ b/public/style_admin/dropdown-user.css
@@ -65,6 +65,8 @@
     margin-right: 1rem;
     margin: 0.5rem 0.75rem 0.5rem 0.5rem;
     border-radius: 50%;
+    width: 40px;
+    height: 40px;
   }
   .profile-dropdown span {
     display: inline-block;
