--- a/public/style_user/layout.css
+++ b/public/style_user/layout.css
@@ -4,6 +4,7 @@ body {
     min-width: 250px;
     overflow-x: hidden;
     background-size: contain;
+    background-size: cover;
     background-image: url("https://images.unsplash.com/photo-1446769357257-5aa1b1bfcd65?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
 }
 
