--- a/public/style_user/entry.css
+++ b/public/style_user/entry.css
@@ -198,7 +198,7 @@
 
 
 /* PAGINATION */
-.pagination {
+/* .pagination {
   width: 20%;
   display: flex;
   margin: auto;
@@ -222,4 +222,4 @@
   font-weight: bold;
   color: black;
   padding: 5px 10px;
-}
+} */
